feat: workaround missing jlink plugin